feat: add typed config and validation

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,14 +20,38 @@ OPENAI_API_KEY=${OPENAI_API_KEY}
 openai.model=gpt-5-mini
 openai.temperature=0.2
 
+app.openai.api-key=${OPENAI_API_KEY}
+app.openai.model=${openai.model}
+app.openai.temperature=${openai.temperature}
+
 # Obsidian vault
 VAULT_PATH=/app/data/vault
 TEMPLATE_PATH=/app/resources/templates
 
+app.paths.vault-path=${VAULT_PATH}
+app.paths.template-path=${TEMPLATE_PATH}
+
 # Google credentials
 GOOGLE_CREDENTIAL_PATH=/app/config/tokens
+app.google.credential-path=${GOOGLE_CREDENTIAL_PATH}
 
 # Docker
 DOCKER_HOST=unix:///var/run/docker.sock
 SYNC_IMAGE=obsidian-livesync-client:latest
 SYNC_WAIT_SECONDS=180
+
+app.docker.host=${DOCKER_HOST}
+app.docker.image=${SYNC_IMAGE}
+app.docker.sync-wait-seconds=${SYNC_WAIT_SECONDS}
+
+# Idempotency
+app.idempotency.path=/app/data/idempotency.log
+app.idempotency.ttl-hours=24
+
+# DLQ
+mp.messaging.incoming.brain-requests.failure-strategy=reject
+mp.messaging.incoming.brain-requests.auto-bind-dlq=true
+mp.messaging.incoming.brain-requests.dead-letter-queue-name=brain.inbox.dlq
+mp.messaging.incoming.brain-requests.dead-letter-exchange=brain.dlx
+mp.messaging.incoming.brain-requests.dead-letter-exchange-type=direct
+mp.messaging.incoming.brain-requests.dead-letter-routing-key=brain.req.dlq
