--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,31 @@ mp.messaging.outgoing.brain-replies.connector=smallrye-in-memory
 openai.model=gpt-5-mini
 openai.temperature=0.2
 
+app.openai.api-key=${OPENAI_API_KEY:}
+app.openai.model=${openai.model}
+app.openai.temperature=${openai.temperature}
+
 # Obsidian paths
 VAULT_PATH=./data/vault
 TEMPLATE_PATH=src/main/resources/templates
 
+app.paths.vault-path=${VAULT_PATH}
+app.paths.template-path=${TEMPLATE_PATH}
+
 # Google credentials (dev placeholder)
 GOOGLE_CREDENTIAL_PATH=./config/tokens
+app.google.credential-path=${GOOGLE_CREDENTIAL_PATH}
 
 # Docker (dev mock)
 SYNC_IMAGE=obsidian-livesync-client:latest
 SYNC_WAIT_SECONDS=180
+
+app.docker.image=${SYNC_IMAGE}
+app.docker.sync-wait-seconds=${SYNC_WAIT_SECONDS}
+
+# Idempotency
+app.idempotency.path=./data/idempotency.log
+app.idempotency.ttl-hours=24
 
 # Quarkus profile
 quarkus.profile=dev
