chore: add docker publish workflow and sqlite backend

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -45,8 +45,16 @@ app.docker.image=${SYNC_IMAGE}
 app.docker.sync-wait-seconds=${SYNC_WAIT_SECONDS}
 
 # Idempotency
+app.idempotency.backend=sqlite
 app.idempotency.path=/app/data/idempotency.log
+app.idempotency.sqlite-path=/app/data/idempotency.db
 app.idempotency.ttl-hours=24
+
+# SQLite datasource (prod)
+quarkus.datasource.db-kind=sqlite
+quarkus.datasource.jdbc.url=jdbc:sqlite:${app.idempotency.sqlite-path}?journal_mode=WAL&synchronous=NORMAL
+quarkus.datasource.jdbc.min-size=1
+quarkus.datasource.jdbc.max-size=2
 
 # DLQ
 mp.messaging.incoming.brain-requests.failure-strategy=reject
@@ -55,3 +63,9 @@ mp.messaging.incoming.brain-requests.dead-letter-queue-name=brain.inbox.dlq
 mp.messaging.incoming.brain-requests.dead-letter-exchange=brain.dlx
 mp.messaging.incoming.brain-requests.dead-letter-exchange-type=direct
 mp.messaging.incoming.brain-requests.dead-letter-routing-key=brain.req.dlq
+
+mp.messaging.incoming.brain-requests-dlq.connector=smallrye-rabbitmq
+mp.messaging.incoming.brain-requests-dlq.queue.name=${mp.messaging.incoming.brain-requests.dead-letter-queue-name}
+mp.messaging.incoming.brain-requests-dlq.exchange.name=${mp.messaging.incoming.brain-requests.dead-letter-exchange}
+mp.messaging.incoming.brain-requests-dlq.routing-keys=${mp.messaging.incoming.brain-requests.dead-letter-routing-key}
+mp.messaging.incoming.brain-requests-dlq.failure-strategy=accept
