--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,13 @@ app.docker.image=${SYNC_IMAGE}
 app.docker.sync-wait-seconds=${SYNC_WAIT_SECONDS}
 
 # Idempotency
+app.idempotency.backend=sqlite
 app.idempotency.path=./data/idempotency.log
+app.idempotency.sqlite-path=./data/idempotency.db
 app.idempotency.ttl-hours=24
 
-# Quarkus profile
-quarkus.profile=dev
+# SQLite datasource (dev)
+quarkus.datasource.db-kind=sqlite
+quarkus.datasource.jdbc.url=jdbc:sqlite:${app.idempotency.sqlite-path}
+quarkus.datasource.jdbc.min-size=1
+quarkus.datasource.jdbc.max-size=2
