--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <langchain4j.version>0.32.0</langchain4j.version>
         <docker-java.version>3.7.0</docker-java.version>
         <google.api.version>v3-rev20251207-2.0.0</google.api.version>
+        <sqlite.extension.version>3.0.11</sqlite.extension.version>
         <google.tasks.version>v1-rev20251102-2.0.0</google.tasks.version>
         <google.auth.version>1.22.0</google.auth.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
@@ -42,6 +43,15 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-agroal</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.jdbc</groupId>
+            <artifactId>quarkus-jdbc-sqlite</artifactId>
+            <version>${sqlite.extension.version}</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
