feat: add google auth flow and docker defaults

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ mp.messaging.incoming.brain-requests.exchange.name=bot.exchange
 mp.messaging.incoming.brain-requests.queue.name=brain.inbox.q
 mp.messaging.incoming.brain-requests.routing-key=brain.req.#
 mp.messaging.outgoing.brain-replies.connector=smallrye-rabbitmq
-mp.messaging.outgoing.brain-replies.exchange.name=telegram.res.reply
+mp.messaging.outgoing.brain-replies.exchange.name=brain.reply.exchange
 
 rabbitmq-host=${RABBITMQ_HOST}
 rabbitmq-port=5672
@@ -37,12 +37,20 @@ app.google.credential-path=${GOOGLE_CREDENTIAL_PATH}
 
 # Docker
 DOCKER_HOST=unix:///var/run/docker.sock
-SYNC_IMAGE=obsidian-livesync-client:latest
-SYNC_WAIT_SECONDS=180
+SYNC_IMAGE=lscr.io/linuxserver/obsidian:latest
+SYNC_WAIT_SECONDS=30
+OBSIDIAN_CONFIG_PATH=/app/data/obsidian-config
+OBSIDIAN_PUID=1000
+OBSIDIAN_PGID=1000
+OBSIDIAN_TZ=Asia/Seoul
 
 app.docker.host=${DOCKER_HOST}
 app.docker.image=${SYNC_IMAGE}
 app.docker.sync-wait-seconds=${SYNC_WAIT_SECONDS}
+app.docker.config-path=${OBSIDIAN_CONFIG_PATH}
+app.docker.puid=${OBSIDIAN_PUID}
+app.docker.pgid=${OBSIDIAN_PGID}
+app.docker.timezone=${OBSIDIAN_TZ}
 
 # Idempotency
 app.idempotency.backend=sqlite
