--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,11 +26,19 @@ GOOGLE_CREDENTIAL_PATH=./config/tokens
 app.google.credential-path=${GOOGLE_CREDENTIAL_PATH}
 
 # Docker (dev mock)
-SYNC_IMAGE=obsidian-livesync-client:latest
-SYNC_WAIT_SECONDS=180
+SYNC_IMAGE=lscr.io/linuxserver/obsidian:latest
+SYNC_WAIT_SECONDS=30
+OBSIDIAN_CONFIG_PATH=./data/obsidian-config
+OBSIDIAN_PUID=1000
+OBSIDIAN_PGID=1000
+OBSIDIAN_TZ=Etc/UTC
 
 app.docker.image=${SYNC_IMAGE}
 app.docker.sync-wait-seconds=${SYNC_WAIT_SECONDS}
+app.docker.config-path=${OBSIDIAN_CONFIG_PATH}
+app.docker.puid=${OBSIDIAN_PUID}
+app.docker.pgid=${OBSIDIAN_PGID}
+app.docker.timezone=${OBSIDIAN_TZ}
 
 # Idempotency
 app.idempotency.backend=sqlite
