feat: add telegram integration pipeline

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,6 +9,13 @@ mp.messaging.incoming.brain-requests.queue.name=brain.inbox.q
 mp.messaging.incoming.brain-requests.routing-key=brain.req.#
 mp.messaging.outgoing.brain-replies.connector=smallrye-rabbitmq
 mp.messaging.outgoing.brain-replies.exchange.name=brain.reply.exchange
+mp.messaging.incoming.telegram-outgoing.connector=smallrye-rabbitmq
+mp.messaging.incoming.telegram-outgoing.exchange.name=telegram.exchange
+mp.messaging.incoming.telegram-outgoing.queue.name=telegram.outgoing.q
+mp.messaging.incoming.telegram-outgoing.routing-key=telegram.outgoing
+mp.messaging.outgoing.telegram-incoming.connector=smallrye-rabbitmq
+mp.messaging.outgoing.telegram-incoming.exchange.name=telegram.exchange
+mp.messaging.outgoing.telegram-incoming.default-routing-key=telegram.incoming
 
 rabbitmq-host=${RABBITMQ_HOST}
 rabbitmq-port=5672
@@ -51,6 +58,11 @@ app.docker.config-path=${OBSIDIAN_CONFIG_PATH}
 app.docker.puid=${OBSIDIAN_PUID}
 app.docker.pgid=${OBSIDIAN_PGID}
 app.docker.timezone=${OBSIDIAN_TZ}
+
+# Telegram
+app.telegram.bot-token=${TELEGRAM_BOT_TOKEN}
+app.telegram.poll-interval-seconds=${TELEGRAM_POLL_INTERVAL_SECONDS:5}
+app.telegram.poll-timeout-seconds=${TELEGRAM_POLL_TIMEOUT_SECONDS:30}
 
 # Idempotency
 app.idempotency.backend=sqlite
