--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ quarkus.log.console.json=false
 # RabbitMQ (dev 기본: in-memory)
 mp.messaging.incoming.brain-requests.connector=smallrye-in-memory
 mp.messaging.outgoing.brain-replies.connector=smallrye-in-memory
+mp.messaging.incoming.telegram-outgoing.connector=smallrye-in-memory
+mp.messaging.outgoing.telegram-incoming.connector=smallrye-in-memory
 
 # OpenAI
 openai.model=gpt-5-mini
@@ -39,6 +41,12 @@ app.docker.config-path=${OBSIDIAN_CONFIG_PATH}
 app.docker.puid=${OBSIDIAN_PUID}
 app.docker.pgid=${OBSIDIAN_PGID}
 app.docker.timezone=${OBSIDIAN_TZ}
+
+# Telegram
+TELEGRAM_BOT_TOKEN=
+app.telegram.bot-token=${TELEGRAM_BOT_TOKEN:}
+app.telegram.poll-interval-seconds=${TELEGRAM_POLL_INTERVAL_SECONDS:5}
+app.telegram.poll-timeout-seconds=${TELEGRAM_POLL_TIMEOUT_SECONDS:30}
 
 # Idempotency
 app.idempotency.backend=sqlite
